--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 		<div id="viewDiv"></div>
 		<script src="https://js.arcgis.com/4.17/"></script>
         
+    <!-- provinces -->
+    <script src="province/long_an.js"></script>
 
     <!-- /bridges -->
     <script src="bridges/dummy.js"></script>
@@ -28,10 +30,30 @@
     <script src="bridges/ham_luong.js"></script>
     <script src="bridges/my_loi.js"></script>
     <script src="bridges/my_thuan.js"></script>
-    <script src="bridges/my_thuan_2.js"></script>
+    <script src="bridges/to_chau.js"></script>
     <script src="bridges/nam_can.js"></script>
     <script src="bridges/rach_mieu.js"></script>
     <script src="bridges/vam_cong.js"></script>
+	
+	<!-- cities -->
+    <script src="cities/AnGiang/chau_doc.js"></script>
+    <script src="cities/AnGiang/long_xuyen.js"></script>
+    <script src="cities/BacLieu/bac_lieu.js"></script>
+    <script src="cities/BenTre/ben_tre.js"></script>
+    <script src="cities/CaMau/ca_mau.js"></script>
+    <script src="cities/DongThap/cao_lanh.js"></script>
+    <script src="cities/DongThap/hong_ngu.js"></script>
+    <script src="cities/DongThap/sa_dec.js"></script>
+    <script src="cities/HauGiang/nga_bay.js"></script>
+    <script src="cities/HauGiang/vi_thanh.js"></script>
+    <script src="cities/KienGiang/ha_tien.js"></script>
+    <script src="cities/KienGiang/rach_gia.js"></script>
+    <script src="cities/LongAn/tan_an.js"></script>
+    <script src="cities/SocTrang/soc_trang.js"></script>
+    <script src="cities/TienGiang/my_tho.js"></script>
+    <script src="cities/TraVinh/tra_vinh.js"></script>
+    <script src="cities/VinhLong/vinh_long.js"></script>
+
 
 		<script src="script.js"></script>
 	</body>
