--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         
     <!-- provinces -->
     <script src="province/long_an.js"></script>
+    <script src="province/ben_tre.js"></script>
 
     <!-- /bridges -->
     <script src="bridges/dummy.js"></script>
