--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script src="province/long_an.js"></script>
     <script src="province/ben_tre.js"></script>
     <script src="province/soc_trang.js"></script>
+    <script src="province/tien_giang.js"></script>
 
     <!-- /bridges -->
     <script src="bridges/dummy.js"></script>
