--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <script src="province/soc_trang.js"></script>
   <script src="province/tien_giang.js"></script>
   <script src="province/an_giang.js"></script>
+  <script src="province/can_tho.js"></script>
 
   <!-- /bridges -->
   <script src="bridges/dummy.js"></script>
