add dthap,vlong to main

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
   <script src="province/can_tho.js"></script>
   <script src="province/hau_giang.js"></script>
   <script src="province/tra_vinh.js"></script>
+  <script src="province/dong_thap.js"></script>
+  <script src="province/vinh_long.js"></script>
 
   <!-- /bridges -->
   <script src="bridges/dummy.js"></script>
