--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   <script src="province/an_giang.js"></script>
   <script src="province/can_tho.js"></script>
   <script src="province/hau_giang.js"></script>
+  <script src="province/ca_mau.js"></script>
 
   <!-- /bridges -->
   <script src="bridges/dummy.js"></script>
@@ -42,6 +43,7 @@
   <script src="bridges/nam_can.js"></script>
   <script src="bridges/rach_mieu.js"></script>
   <script src="bridges/vam_cong.js"></script>
+  
 
   <!-- cities -->
   <script src="cities/AnGiang/chau_doc.js"></script>
@@ -62,6 +64,13 @@
   <script src="cities/TraVinh/tra_vinh.js"></script>
   <script src="cities/VinhLong/vinh_long.js"></script>
 
+  <!-- Highway -->
+
+  <script src="highway\quoc_lo_60.js"></script>
+  <script src="highway\quoc_lo_61.js"></script>
+  <script src="highway\quoc_lo_61B.js"></script>
+  <script src="highway\quoc_lo_62.js"></script>
+  <script src="highway\quoc_lo_80.js"></script>
 
   <script src="script.js"></script>
 </body>
