--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   <script src="province/tien_giang.js"></script>
   <script src="province/an_giang.js"></script>
   <script src="province/can_tho.js"></script>
+  <script src="province/bac_lieu.js"></script>
 
   <!-- /bridges -->
   <script src="bridges/dummy.js"></script>
