--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
   <script src="province/tra_vinh.js"></script>
   <script src="province/dong_thap.js"></script>
   <script src="province/vinh_long.js"></script>
+  <script src="province/bac_lieu.js"></script>
+  <script src="province/kien_giang.js"></script>
 
   <!-- /bridges -->
   <script src="bridges/dummy.js"></script>
