--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
-  <title>Intro to MapView - Create a 2D map | Sample | ArcGIS API for JavaScript 4.21</title>
+  <title>Nhóm 6 - Intro to MapView - Create a 2D map | ArcGIS API for JavaScript 4.17</title>
   <style>
     html,
     body,
