--- a/index.html
+++ b/index.html
@@ -29,15 +29,14 @@
   <script src="province/an_giang.js"></script>
   <script src="province/can_tho.js"></script>
   <script src="province/hau_giang.js"></script>
-
   <script src="province/ca_mau.js"></script>
-
   <script src="province/tra_vinh.js"></script>
   <script src="province/dong_thap.js"></script>
   <script src="province/vinh_long.js"></script>
   <script src="province/bac_lieu.js"></script>
   <script src="province/kien_giang.js"></script>
 
+  
 
   <!-- /bridges -->
   <script src="bridges/dummy.js"></script>
@@ -71,6 +70,17 @@
   <script src="cities/TienGiang/my_tho.js"></script>
   <script src="cities/TraVinh/tra_vinh.js"></script>
   <script src="cities/VinhLong/vinh_long.js"></script>
+  <!-- thị xã -->
+  <script src="cities/AnGiang/tan_chau.js"></script>
+  <script src="cities/BacLieu/gia_rai.js"></script>
+  <script src="cities/HauGiang/long_my.js"></script>
+  <script src="cities/LongAn/kien_tuong.js"></script>
+  <script src="cities/SocTrang/nga_nam.js"></script>
+  <script src="cities/SocTrang/vinh_chau.js"></script>
+  <script src="cities/TienGiang/cai_lay.js"></script>
+  <script src="cities/TienGiang/go_cong.js"></script>
+  <script src="cities/TraVinh/duyen_hai.js"></script>
+  <script src="cities/VinhLong/binh_minh.js"></script>
 
   <!-- Highway -->
 
